# sre-decision-intelligence-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 465657840d32_add_scenario_id_to_rule_evaluations.py  85b193ffa8a0_create_core_decision_tables.py  96ce7bd341e4_add_incident_events_table.py  c1b431eb8ccf_add_incident_events_timeline.py
app/: config.py  main.py
app/api/: db_health.py  health.py
app/collectors/: frontend_availability.py  kubernetes.py  opensearch.py  prometheus.py
app/db/: models.py  repository.py  session.py
app/engine/: decision_engine.py  rule_loader.py  sample_signals.py
app/rules/: argocd_sync_drift.yaml  backend_timeout_spike.yaml  cilium_drop_spike.yaml  frontend_availability_breach.yaml  frontend_failed_scheduling.yaml  frontend_high_5xx_rate.yaml  frontend_high_latency.yaml  frontend_image_pull_backoff.yaml  frontend_oom_killed.yaml  frontend_pod_crashloop.yaml  frontend_service_selector_mismatch.yaml  ledger_database_error_spike.yaml  longhorn_volume_degraded.yaml  node_not_ready.yaml  pvc_mount_failure.yaml  transaction_error_spike.yaml
app/scenarios/: frontend_availability.py  models.py  registry.py
app/schemas/: decision.py  (+10 more)
docs/: 01-project-overview.md  02-architecture.md  03-frameworks.md  03-sli-slo-design.md  04-api-contract.md  05-decision-engine.md  05-implementation-roadmap.md  06-database-design.md  07-roadmap.md  phase13_14_business_concept.md
scripts/: incident_lifecycle.sh  init_db.py
(+93 files in other folders)
